[gd_scene load_steps=19 format=3 uid="uid://cymepr70rmtp3"]

[ext_resource type="Script" path="res://minigames/ladronesDeDiamantes/luzScript.gd" id="1_icj6y"]
[ext_resource type="Script" path="res://minigames/ladronesDeDiamantes/main.gd" id="1_t77jm"]
[ext_resource type="Script" path="res://minigames/ladronesDeDiamantes/Camara.gd" id="1_utla1"]
[ext_resource type="PackedScene" path="res://minigames/ladronesDeDiamantes/glTFmodels/wall.glb" id="5_u4j5q"]
[ext_resource type="PackedScene" uid="uid://xas08oea2tlk" path="res://minigames/ladronesDeDiamantes/glTFmodels/floorWallPart.glb" id="7_mtwf4"]
[ext_resource type="Script" path="res://minigames/ladronesDeDiamantes/rubyScript.gd" id="8_kita4"]
[ext_resource type="Script" path="res://minigames/ladronesDeDiamantes/1000Points.gd" id="10_nq8wq"]
[ext_resource type="Texture2D" uid="uid://drp2nkv8o51r8" path="res://minigames/ladronesDeDiamantes/police.png" id="11_djfeq"]
[ext_resource type="PackedScene" path="res://minigames/ladronesDeDiamantes/glTFmodels/ruby.glb" id="11_j2qx0"]
[ext_resource type="PackedScene" uid="uid://6cr37o5vpnf2" path="res://minigames/ladronesDeDiamantes/glTFmodels/pilar.glb" id="12_buwoq"]
[ext_resource type="PackedScene" uid="uid://c1dpkywnsh8nq" path="res://minigames/ladronesDeDiamantes/glTFmodels/painting.glb" id="13_dku3y"]
[ext_resource type="PackedScene" uid="uid://dal3yfv3cte7c" path="res://minigames/ladronesDeDiamantes/glTFmodels/cushion.glb" id="14_mgyek"]
[ext_resource type="Script" path="res://minigames/ladronesDeDiamantes/lightmanager.gd" id="14_nmcb0"]
[ext_resource type="Texture2D" uid="uid://bo22peipr21a1" path="res://minigames/ladronesDeDiamantes/1000points.png" id="15_11o5p"]
[ext_resource type="PackedScene" uid="uid://bwfx7b6uru3h0" path="res://minigames/ladronesDeDiamantes/glTFmodels/car.glb" id="15_i3ddo"]
[ext_resource type="AudioStream" uid="uid://dptak3yl60ba2" path="res://minigames/ladronesDeDiamantes/thievessongFinal.ogg" id="17_vid4b"]
[ext_resource type="PackedScene" path="res://minigames/ladronesDeDiamantes/glTFmodels/topWallPart.glb" id="20_lq3yf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5bddy"]
radius = 0.961398

[node name="main" type="Node3D"]
script = ExtResource("1_t77jm")

[node name="luzFoco" type="SpotLight3D" parent="."]
transform = Transform3D(0.497976, 0.771658, 0.395681, 0.312881, -0.585421, 0.747922, 0.80878, -0.248646, -0.532963, 23.152, 49.7066, -29.8456)
light_color = Color(0.247059, 0.458824, 0.839216, 1)
light_energy = 8.727
light_indirect_energy = 7.21
light_volumetric_fog_energy = 7.626
light_specular = 0.823
shadow_enabled = true
shadow_bias = 0.0
shadow_normal_bias = 0.242
shadow_blur = 5.025
distance_fade_enabled = true
distance_fade_begin = 453.74
distance_fade_length = 282.15
spot_range = 118.825
spot_attenuation = 0.590636
spot_angle = 12.1081
spot_angle_attenuation = 2.21914

[node name="luzCuadro" type="SpotLight3D" parent="."]
transform = Transform3D(0.225431, -0.24265, 0.943558, 0.0563861, 0.970114, 0.236008, -0.972626, 1.11074e-07, 0.232376, 8.48585, 18.5006, 10.6596)
light_color = Color(0.760784, 0.741176, 1, 1)
light_energy = 10.666
light_indirect_energy = 1.025
light_volumetric_fog_energy = 1.323
light_size = 0.061
shadow_enabled = true
shadow_bias = 1.313
shadow_normal_bias = 0.0
shadow_transmittance_bias = 5.221
shadow_blur = 6.065
spot_range = 19.5501
spot_angle = 12.9477

[node name="luzPolicia" type="SpotLight3D" parent="."]
transform = Transform3D(0.989191, -0.0891461, 0.116418, -0.0954005, 0.211655, 0.972677, -0.111351, -0.97327, 0.200863, 1.65989, 19.8733, 2.07678)
light_energy = 16.0
light_indirect_energy = 11.343
light_specular = 5.51
distance_fade_begin = 2770.67
distance_fade_length = 382.36
spot_range = 36.5092
spot_attenuation = 1.23114
spot_angle = 11.5841
spot_angle_attenuation = 0.517633
script = ExtResource("1_icj6y")

[node name="TimerStartEnd" type="Timer" parent="luzPolicia"]
wait_time = 0.7
one_shot = true
autostart = true

[node name="TimerFlickers" type="Timer" parent="luzPolicia"]
wait_time = 0.75
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, 15.8376, 13.9342, 0)
script = ExtResource("1_utla1")

[node name="policia" type="Sprite3D" parent="."]
transform = Transform3D(-5.68248e-08, 0, 1, 0, 1.5, 0, -1.3, 0, -4.37114e-08, -0.148451, 8.62807, -17.4314)
modulate = Color(0.584314, 0.584314, 0.584314, 1)
billboard = 1
shaded = true
alpha_scissor_threshold = 0.46
texture = ExtResource("11_djfeq")

[node name="environment" type="Node3D" parent="."]

[node name="NEWrightwall" parent="environment" instance=ExtResource("5_u4j5q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.55)

[node name="NEWrightwall2" parent="environment" instance=ExtResource("5_u4j5q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -31.113)

[node name="NEWnextwall" parent="environment" instance=ExtResource("5_u4j5q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -31.113)

[node name="NEWmiddlewall" parent="environment" instance=ExtResource("5_u4j5q")]

[node name="NEWleftwall" parent="environment" instance=ExtResource("5_u4j5q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15.55)

[node name="topLeftPart" parent="environment" instance=ExtResource("20_lq3yf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.91, 15.55)

[node name="topWallPart" parent="environment" instance=ExtResource("20_lq3yf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.91, 0)

[node name="topRightPart" parent="environment" instance=ExtResource("20_lq3yf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.91, -15.55)

[node name="topRightPart2" parent="environment" instance=ExtResource("20_lq3yf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.91, -31.113)

[node name="topNextPart" parent="environment" instance=ExtResource("20_lq3yf")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 14.91, -31.113)

[node name="floorWallPart" parent="environment" instance=ExtResource("7_mtwf4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6, 0, 0)

[node name="floorWallPart4" parent="environment" instance=ExtResource("7_mtwf4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6, 0, 15.55)

[node name="floorWallPart2" parent="environment" instance=ExtResource("7_mtwf4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6, 0, -15.55)

[node name="floorWallPart3" parent="environment" instance=ExtResource("7_mtwf4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6, 0, -31.113)

[node name="1000Points" type="Sprite3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.24633, 12.1678, -1.4853)
modulate = Color(1, 1, 1, 0)
texture = ExtResource("15_11o5p")
script = ExtResource("10_nq8wq")

[node name="ruby" parent="." instance=ExtResource("11_j2qx0")]
transform = Transform3D(2, 0, 0, 0, 1.77883, 0.914196, 0, -0.914196, 1.77883, 0.208, 10.138, 0.201)
script = ExtResource("8_kita4")

[node name="Area3D" type="Area3D" parent="ruby"]
transform = Transform3D(1, 0, 0, 0, 0.999998, -0.000295818, 0, 0.000295818, 0.999998, -0.000154004, -5.10216e-05, -0.000228167)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ruby/Area3D"]
shape = SubResource("SphereShape3D_5bddy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.661312, 0.00392755, 0.750101, 0, 0.999986, -0.00523596, -0.750111, -0.00346261, -0.661303, 14.1111, 11.815, 0.574895)
light_color = Color(0, 0, 0, 1)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 1.715

[node name="pedestal" parent="." instance=ExtResource("12_buwoq")]
transform = Transform3D(1.6, 0, 0, 0, 1.6, 0, 0, 0, 1.6, 0, 4.21, 0)

[node name="paintingnew" parent="." instance=ExtResource("13_dku3y")]
transform = Transform3D(-3.11662e-08, 0.713, 0, -0.713, -3.11662e-08, 0, 0, 0, 0.713, -7.353, 14.511, 6.672)

[node name="newcushion" parent="." instance=ExtResource("14_mgyek")]
transform = Transform3D(0.370454, 0, 0.104828, 0, 0.385, 0, -0.104828, 0, 0.370454, 0.221, 9.43, 0.144)

[node name="newcar" parent="." instance=ExtResource("15_i3ddo")]
transform = Transform3D(-0.513611, 0, -0.475609, 0, 0.7, 0, 0.475609, 0, -0.513611, 13.309, 2.81, -20.707)

[node name="azul" type="SpotLight3D" parent="."]
transform = Transform3D(0.296917, 0.954753, 0.0169426, -0.814075, 0.243814, 0.527102, 0.499122, -0.170298, 0.849633, 3.89932, 34.8226, 15.9175)
light_color = Color(0.262745, 0.239216, 0.388235, 1)
light_energy = 600.0
light_specular = 1.19
distance_fade_begin = 81.37
distance_fade_length = 787.95
spot_range = 104.122
spot_angle = 15.6989

[node name="lightmanager" type="Node3D" parent="."]
script = ExtResource("14_nmcb0")

[node name="azulpolicia" type="SpotLight3D" parent="lightmanager"]
transform = Transform3D(0.886567, 1.71741e-07, 0.4626, -0.300195, 0.760848, 0.57532, -0.351968, -0.64893, 0.674543, 21.5842, 27.755, 2.08682)
light_color = Color(0.168627, 0.192157, 0.529412, 1)
light_energy = 600.0
light_specular = 1.19
distance_fade_begin = 81.37
distance_fade_length = 787.95
spot_range = 58.5791
spot_angle = 25.529

[node name="rojopolicia" type="SpotLight3D" parent="lightmanager"]
transform = Transform3D(0.391986, -0.451461, 0.80158, -0.300195, 0.760848, 0.57532, -0.869615, -0.466148, 0.162715, 33.0008, 27.8699, -20.3141)
light_color = Color(0.870588, 0.337255, 0.360784, 1)
light_energy = 100.0
light_specular = 1.19
distance_fade_begin = 81.37
distance_fade_length = 787.95
spot_range = 102.087
spot_angle = 20.6211

[node name="blueLightTimer" type="Timer" parent="lightmanager"]
wait_time = 0.8
one_shot = true
autostart = true

[node name="redLightTimer" type="Timer" parent="lightmanager"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_vid4b")
volume_db = 2.811
autoplay = true

[connection signal="game_lose" from="luzPolicia" to="." method="_on_game_lose"]
[connection signal="game_lose" from="luzPolicia" to="Camera3D" method="_on_game_lose"]
[connection signal="game_win" from="luzPolicia" to="." method="_on_game_win"]
[connection signal="game_win" from="luzPolicia" to="1000Points" method="_on_game_win"]
[connection signal="game_win" from="luzPolicia" to="ruby" method="_on_game_win"]
[connection signal="timeout" from="luzPolicia/TimerStartEnd" to="luzPolicia" method="_on_timer_timeout"]
[connection signal="timeout" from="luzPolicia/TimerFlickers" to="luzPolicia" method="_on_timer_flickers_timeout"]
[connection signal="input_event" from="ruby/Area3D" to="luzPolicia" method="_on_area_3d_input_event"]
[connection signal="timeout" from="lightmanager/blueLightTimer" to="lightmanager" method="_on_blue_light_timer_timeout"]
[connection signal="timeout" from="lightmanager/redLightTimer" to="lightmanager" method="_on_red_light_timer_timeout"]
